--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <div id="container">
-    <canvas id="game" width="1280" height="720"></canvas>
+    <canvas id="game"></canvas>
 
     <!-- Status bar top-left using emoji GUI -->
     <div id="status" aria-hidden="false">
-      <div class="stat"><span class="emoji">🏃</span> <span id="score">0</span></div>
+      <div class="stat"><span class="emoji">💲</span> <span id="score">0</span></div>
+      <div class="stat"><span class="emoji">🪙</span> <span id="coins">0</span></div>
       <div class="stat"><span class="emoji">💎</span> <span id="gems">0</span></div>
       <div class="stat"><span class="emoji">❤️</span> <span id="hp">3.0</span></div>
       <div class="stat"><span class="emoji">⏱</span> <span id="time">60</span></div>
@@ -23,11 +24,10 @@
       <div id="menu" class="panel">
         <div class="title">Emoji Adventure</div>
         <div class="desc">Top‑down collectible dodge game</div>
-        <div class="controls">Use WASD / Arrow keys • Click to dash (short) • ESC to pause</div>
+        <div class="controls">WASD / Arrows • Click to dash (short) • ESC to pause</div>
         <div class="menu-row">
           <button id="play">▶ Play</button>
           <button id="easy" class="diff">🐣 Easy</button>
-          <button id="normal" class="diff active">😎 Normal</button>
           <button id="hard" class="diff">🦂 Hard</button>
         </div>
       </div>
@@ -55,4 +55,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
